--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "http://{Samurai412}.github.io/{samurai-zone}",
+  "homepage": "http://Samurai412.github.io/samurai-zone",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://{Samurai412}.github.io/{samurai-zone}'",
+    "build-gh": "parcel build --public-url 'https://Samurai412.github.io/samurai-zone}'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
